# LPRS2_2026

Dimmer/FW/LED_Display_Bringup/Color_Bar/: Color_Bar.ino  defs.hpp
Dimmer/FW/LED_Display_Bringup/Running_Dot/: Running_Dot.ino  defs.hpp
Dimmer/FW/LED_Display_Bringup/Running_Dot_Optim/: Running_Dot_Optim.ino
Dimmer/FW/LED_Display_Bringup/Text_Test/: Text_Test.ino  lcd5x8_font.h
Dimmer/FW/Uni_AC_Power_Dimmer_Timer/: 01_test__blink_all_pins.c  02_test__uart_printf.cpp  03_test__screen__pin_blink.cpp  04_test__screen__march_colors.cpp  05_test__screen__text.cpp  06_test__keyboard.cpp  10_test__zero_cross.cpp  11_test__basic_dimmer.cpp  common.hpp  flow.sh  lcd5x8_font.h  rename_prog.sh  uart_stdio.cpp  uart_stdio.hpp  waf  wscript
LLVM_sv_cpu/FW/: asm.sh  comp.sh
LLVM_sv_cpu/FW/test/: 009__jmp.sv.asm  010__st.sv.asm  060__vmax.sv.asm
LLVM_sv_cpu/FW/test_c/: 009__jmp.sv.c  010_a__st.sv.c  010_b__st__link_script.sv.c
LLVM_sv_cpu/SW/Config_CPU/: Makefile
LLVM_sv_cpu/SW/LLVM/: flow.sh
Robo_Hand_RS485/: work.txt
Robo_Hand_RS485/ROS2/robo_hand_ws/: bootstrap.sh  flow.sh
Robo_Hand_RS485/ROS2/robo_hand_ws/install/: local_setup.sh  setup.sh
Robo_Hand_RS485/ROS2/robo_hand_ws/install/glue_events_routines/lib/glue_events_routines/: hand_test
Robo_Hand_RS485/ROS2/robo_hand_ws/install/glue_events_routines/share/glue_events_routines/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/install/mbot_demo/share/mbot_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/install/realsense_gazebo_plugin/share/realsense_gazebo_plugin/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/install/uf_ros_lib/share/uf_ros_lib/: package.sh  package.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_api/include/xarm_api/: visibility_control.h  xarm_driver.h  xarm_msgs.h  xarm_ros_client.h
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_api/lib/xarm_api/: test_robot_states  test_xarm_ros_client  test_xarm_velo_move  xarm_driver_node
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_api/share/xarm_api/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_controller/share/xarm_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  uf_hardware_interface_plugins.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_description/share/xarm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_gazebo/share/xarm_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_moveit_config/share/xarm_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_moveit_servo/lib/xarm_moveit_servo/: xarm_joystick_input_node  xarm_keyboard_input
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_moveit_servo/share/xarm_moveit_servo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_msgs/share/xarm_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_planner/include/xarm_planner/: xarm_planner.h
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_planner/lib/xarm_planner/: test_dual_xarm_planner_api_joint  test_lite_gripper_realmove  test_xarm_gripper_planner_api_joint  test_xarm_gripper_planner_client_joint  test_xarm_planner_api_joint  test_xarm_planner_api_pose  test_xarm_planner_client_joint  test_xarm_planner_client_pose  xarm_gripper_planner_node  xarm_planner_node
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_planner/share/xarm_planner/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/install/xarm_sdk/share/xarm_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
Robo_Hand_RS485/ROS2/robo_hand_ws/log/: latest_build
Robo_Hand_RS485/ROS2/robo_hand_ws/src/custom/glue_events_routines/: CMakeLists.txt  package.xml
Robo_Hand_RS485/ROS2/robo_hand_ws/src/custom/glue_events_routines/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Robo_Hand_RS485/ROS2/robo_hand_ws/src/custom/glue_events_routines/install/glue_events_routines/lib/glue_events_routines/: hand_test
Robo_Hand_RS485/ROS2/robo_hand_ws/src/custom/glue_events_routines/install/glue_events_routines/share/ament_index/resource_index/package_run_dependencies/: glue_events_routines
Robo_Hand_RS485/ROS2/robo_hand_ws/src/custom/glue_events_routines/install/glue_events_routines/share/ament_index/resource_index/parent_prefix_path/: glue_events_routines
Robo_Hand_RS485/ROS2/robo_hand_ws/src/custom/glue_events_routines/install/glue_events_routines/share/glue_events_routines/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Robo_Hand_RS485/ROS2/robo_hand_ws/src/custom/glue_events_routines/install/glue_events_routines/share/glue_events_routines/cmake/: glue_events_routinesConfig-version.cmake  glue_events_routinesConfig.cmake
Robo_Hand_RS485/ROS2/robo_hand_ws/src/custom/glue_events_routines/install/glue_events_routines/share/glue_events_routines/environment/: ament_prefix_path.dsv  path.dsv
Robo_Hand_RS485/ROS2/robo_hand_ws/src/custom/glue_events_routines/launch/: _common.launch.py  lite6.launch.py
Robo_Hand_RS485/ROS2/robo_hand_ws/src/custom/glue_events_routines/log/: latest_build
Robo_Hand_RS485/ROS2/robo_hand_ws/src/custom/glue_events_routines/src/: eventer.cpp  eventer.hpp  hand_test.cpp
(+1422 files in other folders)
